# tarah

./: Cargo.toml  README.md  tarah_split.tar.xz
src/: cleanup.rs  else_pacman.rs  install.rs  main.rs  remove.rs  sync.rs  update.rs  upgrade.rs
src/cli/: #main.rs#  cleanup.rs  else_pacman.rs  gradient.rs  helpers.rs  install.rs  main.rs  remove.rs  search.rs  sync.rs  update.rs  upgrade.rs
src/tui/: main.rs
