[package]
name = "tarah"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = "4.5.37"
colored = "3.0.0"
git2 = "0.20.1"
random-number = "0.1.9"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tokio = "1.45.1"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "tui"
path = "src/tui/main.rs"

