[package]
name = "tarah"
version = "0.0.1"
edition = "2024"

[dependencies]
colored = "3.0.0"
git2 = "0.20.1"
random-number = "0.1.9"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = "1.0.219"


[[bin]]
name = "tarah"
path = "src/cli/main.rs"

[[bin]]
name = "tarahtui"
path = "src/tui/main.rs"

